Attempt at fixing header disalignment

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,7 @@ a {
 #title-banner p{
 	text-align: center;
 	font-family: "Times New Romen";
+	display: inline-block;
 }
 
 
